feat:修改UI配置和依赖配置

--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cklwblove/vue-preset.git"
+    "url": "git+https://github.com/zhouzhili/vue-preset.git"
   },
   "keywords": [
     "vue-cli3",
     "preset"
   ],
-  "author": "liwb",
+  "author": "zzl",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cklwblove/vue-preset/issues"
+    "url": "https://github.com/zhouzhili/vue-preset/issues"
   },
-  "homepage": "https://github.com/cklwblove/vue-preset#readme",
+  "homepage": "https://github.com/zhouzhili/vue-preset#readme",
   "devDependencies": {
     "vuepress": "^0.14.8"
   }
